--- a/requirements.txt
+++ b/requirements.txt
@@ -1,154 +1,7 @@
-acres
-aiohappyeyeballs
-aiohttp
-aiosignal
-annotated-types
-anyio
-asttokens
-attrs
-backcall
-beautifulsoup4
-bleach
-certifi
-charset-normalizer
-ci-info
-click
-configobj
-configparser
-dataclasses-json
-decorator
-defusedxml
-docopt
-docx
-etelemetry
-executing
-faiss-cpu
-fastjsonschema
-filelock
-fitz
-frozenlist
-fsspec
-greenlet
-h11
-httpcore
-httplib2
-httpx
-httpx-sse
-huggingface-hub
-idna
-ipython
-isodate
-jedi
-Jinja2
-joblib
-jsonpatch
-jsonpointer
-jsonschema
-jsonschema-specifications
-jupyter_client
-jupyter_core
-jupyterlab_pygments
-langchain
-langchain-community
-langchain-core
-langchain-huggingface
-langchain-text-splitters
-langsmith
-looseversion
-lxml
-MarkupSafe
-marshmallow
-matplotlib-inline
-mistune
-mpmath
-multidict
-mypy-extensions
-nbclient
-nbconvert
-nbformat
-networkx
-nibabel
-nipype
-numpy
-nvidia-cublas-cu12
-nvidia-cuda-cupti-cu12
-nvidia-cuda-nvrtc-cu12
-nvidia-cuda-runtime-cu12
-nvidia-cudnn-cu12
-nvidia-cufft-cu12
-nvidia-curand-cu12
-nvidia-cusolver-cu12
-nvidia-cusparse-cu12
-nvidia-nccl-cu12
-nvidia-nvjitlink-cu12
-nvidia-nvtx-cu12
-orjson
-packaging
-pandas
-pandocfilters
-parso
-pathlib
-pexpect
-pickleshare
-pillow
-pipreqs
-platformdirs
-prompt_toolkit
-propcache
-prov
-ptyprocess
-pure_eval
-puremagic
-pydantic
-pydantic-settings
-pydantic_core
-pydot
-Pygments
-PyMuPDF
-pyparsing
-pytesseract
-python-dateutil
-python-dotenv
-pytz
-pyxnat
-PyYAML
-pyzmq
-rdflib
-referencing
-regex
-requests
-requests-toolbelt
-rpds-py
-safetensors
-scikit-learn
-scipy
-semantic-chunkers
-sentence-transformers
-setuptools
-simplejson
-six
-sniffio
-soupsieve
-SQLAlchemy
-stack-data
-streamlit
-sympy
-tenacity
-threadpoolctl
-tinycss2
-tokenizers
-torch
-tornado
-tqdm
-traitlets
-traits
-transformers
-triton
-typing-inspect
-typing_extensions
-tzdata
-urllib3
-wcwidth
-webencodings
-yarg
-yarl
+faiss-cpu==1.9.0.post1
+langchain-community==0.3.10
+langchain-huggingface==0.1.2
+pymupdf==1.25.0
+pytesseract==0.3.13
+semantic-chunkers==0.0.10
+streamlit==1.40.2
